# cram_gazebo

cram_gazebo_utilities/: cram-gazebo-utilities.asd  package.xml
cram_gazebo_utilities/src/: package.lisp  utils.lisp
gazebo_perception_process_module/: gazebo-perception-process-module.asd  package.xml
gazebo_perception_process_module/src/: designator.lisp  gazebo-designator-data.lisp  package.lisp  process-module.lisp  utilities.lisp
gazebo_visibility_ros/plugin_src/: CMaekLists.txt  object_visibility_plugin.cpp
gazebo_visibility_ros/plugin_src/msgs/: CMakeLists.txt  visibility_query.proto  visibility_result.proto
gazebo_visibility_ros/src/: gazebo_visibility_ros.cpp
